--- a/nginx.conf
+++ b/nginx.conf
@@ -4,36 +4,42 @@ events {
 
 http {
     upstream user_service {
-        server user-service:5001;
+        server user_service:5001;
     }
 
     upstream product_service {
-        server product-service:5002;
+        server product_Service:5002;
     }
 
     upstream cart_service {
-        server cart-service:5003;
+        server cart_service:5003;
     }
 
     server {
         listen 80;
 
-        location /api/users {
-            proxy_pass http://user_service;
+        location /users {
+            proxy_pass http://user_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/products {
-            proxy_pass http://product_service;
+        location /products {
+            proxy_pass http://product_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/cart {
-            proxy_pass http://cart_service;
+        location /cart {
+            proxy_pass http://cart_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
